<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/frag_add"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Add_Detail"
    tools:showIn="@layout/activity_add__detail">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/niki"
        android:alpha="0.09"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/title_edit"
                android:layout_alignEnd="@+id/type"
                android:layout_weight="0.30"
                android:text="Name:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/radio_group"
                android:layout_centerVertical="true"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_weight="0.70"
                android:ems="10"
                android:hint="Enter Name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_linear"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/phone_edit"
                android:layout_alignEnd="@+id/title"
                android:layout_weight="0.30"
                android:text="Phone:"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/name_edit"
                android:layout_weight="0.70"
                android:ems="10"
                android:hint="Enter your mobile no."
                android:inputType="phone"
                android:maxLength="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/seats_edit"
                android:layout_alignEnd="@+id/type"
                android:layout_weight="0.30"
                android:text="Seats:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/seats_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/phone_edit"
                android:layout_centerVertical="true"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_weight="0.70"
                android:ems="10"
                android:hint="Number of Seats"
                android:inputType="number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/in_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/in_time_edit"
                android:layout_alignEnd="@+id/type"
                android:layout_weight="0.30"
                android:text="Time:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/in_time_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/phone_edit"
                android:layout_centerVertical="true"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_weight="0.70"
                android:ems="10"
                android:hint="Enter your In-Time"
                android:inputType="datetime"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Available Seats:"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_below="@+id/linear"
        />

    <EditText
        android:id="@+id/available_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20dp"
        android:layout_below="@+id/linear"
        android:layout_toRightOf="@id/text_a"
        android:layout_alignBaseline="@id/text_a"
        android:background="@android:color/transparent"
        android:inputType="none"
        android:layout_marginRight="10dp"
        android:hint="Not available"
        android:editable="false"
        />

</RelativeLayout>